--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 #################
+## JetBrains WebStorm
+#################
+
+workspace.xml
+tasks.xml
+
+#################
 ## Eclipse
 #################
 
