--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 ## JetBrains WebStorm
 #################
 
-workspace.xml
-tasks.xml
+.idea/workspace.xml
+.idea/tasks.xml
 
 #################
 ## Eclipse
